--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,8 @@
 .bg-blue-800:hover{
     background-color: #733804d8;
 }
+.mygrid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 1rem;
+}
