New code is added now

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 
 .bg-blue-800{
     background-color: #2c5382;
-    transition: all 1s ease;
+    transition: all 1s ease-in;
 }
 
 .bg-blue-800:hover{
