--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,26 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 1rem;
 }
+
+.Success {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18); /* Optionally add a semi-transparent background */
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    z-index: 9999; /* Ensure it's above other elements */
+  }
+
+  .bgBlack {
+    background-color: black;
+    color: white; /* Set the text color to white for visibility */
+    /* Add any other styles you need */
+  }
